--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ pytest-cov==5.0.0
 black==24.4.2
 flake8==7.1.0
 mypy==1.10.1
+reportlab==4.4.4
+flask-socketio==5.3.6
+psutil==6.1.1
+requests==2.32.3
